// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard expect to render with error 1`] = `
<Card
  className="ins-error-card"
>
  <CardBody>
    <ErrorState
      errorDescription="Some kind of error"
    />
  </CardBody>
</Card>
`;

exports[`ErrorCard expect to render without error 1`] = `
<Card
  className="ins-error-card"
>
  <CardBody>
    <ErrorState />
  </CardBody>
</Card>
`;
